add headings and p

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 <body>
 
 
-<h1>Git Demo Page</h1>
+<h1 class="headings">Git Demo Page</h1>
+<h2 class="headings">Git Demo Page</h2>
+<h3 class="headings">Git Demo Page</h3>
+<h4 class="headings">Git Demo Page</h4>
+<h5 class="headings">Git Demo Page</h5>
+<h6 class="headings">Git Demo Page</h6>
+
+<p>My first repository I initialized with Git</p>
+
+
 
 <script type="text/javascript" src="app.js"></script>
 </body>
